first working big stack

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,21 +25,21 @@ set(SOURCE_FILES
         src/plugins/generator.h src/plugins/cout.h src/plugins/tcp_in.h src/base/serializer.h src/serializers/line.h src/plugins/string_to_json.h src/base/json.h src/plugins/kafka_out.h src/base/plugins/mutexed_plugin.h src/plugins/collate.h src/plugins/ysoft/normalize_nlog_logs.h src/extras/convert_time.h src/plugins/ysoft/normalize_log4j2_logs.h src/plugins/ysoft/normalize_serilog_logs.h src/plugins/ysoft/add_local_info.h src/plugins/json_to_string.h src/plugins/tcp_out.h src/plugins/lambda.h src/extras/logger.h src/extras/logger.cpp src/plugins/kafka_in.h src/plugins/http_out.h src/plugins/stats.h src/base/plugins/mutexed_threaded_plugin.h src/extras/get_time.h src/plugins/stream_sort.h src/extras/get_executable_path.h src/plugins/elapsed.h src/plugins/cin.h src/base/options/option.h src/base/options/constant.h src/base/options/event.h src/base/options/command.h src/plugins/regex.h src/plugins/ysoft/get_elapsed_preevents.h src/plugins/ysoft/count_logs.h src/serializers/plain.h src/base/json_to_influx.h src/plugins/filter.h src/plugins/drop.h)
 
 
-if (WIN32)
-    if (${CMAKE_BUILD_TYPE} STREQUAL Debug)
+if (${CMAKE_BUILD_TYPE} STREQUAL Debug)
+    if (WIN32)
         set(LIBRARIES re2.lib cppkafka.lib rdkafka.lib zlibstaticd.lib stxxl_debug.lib rdkafka++.lib )
-        set(POSTFIX windows-debug)
-    else ()
-        set(LIBRARIES re2.lib cppkafka.lib rdkafka.lib zlibstatic.lib stxxl.lib rdkafka++.lib)
-        set(POSTFIX windows)
-    endif ()
-elseif (UNIX)
-    if (${CMAKE_BUILD_TYPE} STREQUAL Debug)
+        set(DIR_POSTFIX windows-debug)
+    elseif (UNIX)
         set(LIBRARIES libre2.a libcppkafka.a librdkafka.a libstxxl_debug.a libz.a librdkafka++.a)
-        set(POSTFIX linux-debug)
-    else ()
+        set(DIR_POSTFIX linux-debug)
+    endif ()
+else ()
+    if (WIN32)
+        set(LIBRARIES re2.lib cppkafka.lib rdkafka.lib zlibstatic.lib stxxl.lib rdkafka++.lib)
+        set(DIR_POSTFIX windows)
+    elseif (UNIX)
         set(LIBRARIES libre2.a libcppkafka.a librdkafka.a libstxxl.a libz.a librdkafka++.a)
-        set(POSTFIX linux)
+        set(DIR_POSTFIX linux)
     endif ()
 endif ()
 
@@ -49,20 +49,27 @@ include_directories(lib/${CMAKE_BUILD_TYPE}/include)
 link_directories(lib/${CMAKE_BUILD_TYPE}/lib)
 include_directories(src)
 
-set(TARGETS calf_parser metrics_forwarder correlator parser little_stack_parser)
+set(TARGETS calf_parser metrics_forwarder correlator parser little_stack_parser forwarder)
 
 foreach (executable ${TARGETS})
-    add_executable(${executable} src/${executable}.cpp ${SOURCE_FILES})
-    target_link_libraries(${executable} ${LIBRARIES})
+    add_executable(${executable}${TARGET_POSTFIX} src/${executable}.cpp ${SOURCE_FILES})
+    target_link_libraries(${executable}${TARGET_POSTFIX} ${LIBRARIES})
 endforeach ()
 
 foreach (target ${TARGETS})
-    install(TARGETS ${target} DESTINATION ${target}-${POSTFIX}/)
+    install(TARGETS ${target}${TARGET_POSTFIX} DESTINATION ${target}-${DIR_POSTFIX}/)
     if (${target} STREQUAL parser)
-        install(FILES tests/parsers DESTINATION ${target}-${POSTFIX}/)
+        install(FILES configs/parsers DESTINATION ${target}-${DIR_POSTFIX}/)
+        install(FILES configs/elapsed DESTINATION ${target}-${DIR_POSTFIX}/)
     endif()
     if (${target} STREQUAL little_stack_parser)
-        install(FILES tests/parsers DESTINATION ${target}-${POSTFIX}/)
-        install(FILES tests/elapsed DESTINATION ${target}-${POSTFIX}/)
+        install(FILES configs/parsers DESTINATION ${target}-${DIR_POSTFIX}/)
+        install(FILES configs/elapsed DESTINATION ${target}-${DIR_POSTFIX}/)
     endif()
 endforeach ()
+
+
+if (${CMAKE_BUILD_TYPE} STREQUAL Release)
+    # empty target for clion to setup set of upload scripts, only in release
+    add_custom_target(upload)
+endif()
