--- a/linux/Dockerfile
+++ b/linux/Dockerfile
@@ -1,8 +1,8 @@
 FROM ubuntu:16.04
 RUN apt update -y && \
-    apt install git g++ python python-pip wget -y && \
-    python -m pip install --upgrade pip && \
-    python -m pip install cmake
+    apt install git g++ python3 python3-pip wget -y && \
+    python3 -m pip install --upgrade pip && \
+    python3 -m pip install cmake
 # cmake installed with pip, because it is newer version
 
 ENTRYPOINT ["/bin/bash", "-c"]
