--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ set(SOURCE_FILES
         src/base/plugins/threaded_plugin.cpp src/base/plugins/threaded_plugin.h
         src/base/plugins/mutexed_threaded_plugin.cpp src/base/plugins/mutexed_threaded_plugin.h
         src/base/plugins/mutexed_plugin.cpp src/base/plugins/mutexed_plugin.h src/serializers/compressed.cpp
-        src/serializers/compressed.h src/base/options/option.cpp src/base/options/option.h src/extras/convert_time.cpp src/extras/convert_time.h src/extras/get_executable_path.cpp src/extras/get_executable_path.h src/extras/get_time.cpp src/extras/get_time.h src/serializers/line.cpp src/serializers/line.h src/plugins/time_sort.h)
+        src/serializers/compressed.h src/base/options/option.cpp src/base/options/option.h src/extras/convert_time.cpp src/extras/convert_time.h src/extras/get_executable_path.cpp src/extras/get_executable_path.h src/extras/get_time.cpp src/extras/get_time.h src/serializers/line.cpp src/serializers/line.h src/plugins/time_sort.h src/plugins/file_out.h src/plugins/file_in.h src/plugins/copy.h)
 
 
 if (${CMAKE_BUILD_TYPE} STREQUAL Debug)
@@ -60,7 +60,7 @@ include_directories(lib/${CMAKE_BUILD_TYPE}/include)
 link_directories(lib/${CMAKE_BUILD_TYPE}/lib)
 include_directories(src)
 
-set(TARGETS calf_parser metrics_forwarder correlator parser little_stack_parser forwarder)
+set(TARGETS calf_parser metrics_forwarder correlator parser little_stack_parser forwarder archive_reader)
 
 foreach (executable ${TARGETS})
     add_executable(${executable}${TARGET_POSTFIX} src/${executable}.cpp ${SOURCE_FILES})
