--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ set(SOURCE_FILES
         src/serializers/compressed.h src/base/options/event_option.cpp src/base/options/event_option.h src/extras/convert_time.cpp
         src/extras/convert_time.h src/extras/get_executable_path.cpp src/extras/get_executable_path.h
         src/extras/get_time.cpp src/extras/get_time.h src/serializers/line.cpp src/serializers/line.h
-        src/plugins/time_sort.h src/plugins/file_out.h src/plugins/file_in.h src/plugins/copy.h src/extras/validators.h src/wolf.h)
+        src/plugins/time_sort.h src/plugins/file_out.h src/plugins/file_in.h src/plugins/copy.h src/extras/validators.h src/wolf.h src/base/queue.cpp src/base/queue.h src/base/sleeper.cpp src/base/sleeper.h)
 
 
 if (${CMAKE_BUILD_TYPE} STREQUAL Debug)
