wolf buildable using docker

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.13)
 project(wolf)
 set(CMAKE_CXX_STANDARD 11)
 
-add_subdirectory(cmake/build_wolf wolf)
+add_subdirectory(cmake/build_wolf wolf_lib)
