--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Linux wolf build
 
 on: [push]
 jobs:
@@ -10,8 +10,6 @@ jobs:
     - name: Build the Docker image
       run: |
         docker build . --file docker/wolf_base/linux.Dockerfile --tag lamanchy/wolf_base
-        docker build . --file docker/wolf_lib/linux.Dockerfile --tag lamanchy/wolf_lib
         docker build . --file docker/wolf_app/linux.Dockerfile --tag lamanchy/wolf_app
         docker login -u "lamanchy" -p "${{ secrets.DOCKER_PASSWORD }}"
-        docker push lamanchy/wolf_lib
         docker push lamanchy/wolf_app
