--- a/.github/workflows/dockerimage_windows.yml
+++ b/.github/workflows/dockerimage_windows.yml
@@ -9,7 +9,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build the Docker image
       run: |
+        docker image list
         docker login -u "lamanchy" -p "${{ secrets.DOCKER_PASSWORD }}"
-        docker build . --file docker\wolf_base\windows.Dockerfile --tag lamanchy/wolf_base
-        docker build . --file docker\wolf_app\windows.Dockerfile --tag lamanchy/wolf
-        docker push lamanchy/wolf
+#        docker build . --file docker\wolf_base\windows.Dockerfile --tag lamanchy/wolf_base
+#        docker build . --file docker\wolf_app\windows.Dockerfile --tag lamanchy/wolf
+#        docker push lamanchy/wolf
