--- a/.github/workflows/dockerimage_linux.yml
+++ b/.github/workflows/dockerimage_linux.yml
@@ -10,6 +10,8 @@ jobs:
     - name: Build the Docker image
       run: |
         docker login -u "lamanchy" -p "${{ secrets.DOCKER_PASSWORD }}"
+        Get-PSDrive C | Select-Object Used,Free
+
 #        docker build . --file docker/wolf_base/linux.Dockerfile --tag lamanchy/wolf_base
 #        docker build . --file docker/wolf_app/linux.Dockerfile --tag lamanchy/wolf
 #        docker push lamanchy/wolf
