--- a/.github/workflows/dockerimage_windows.yml
+++ b/.github/workflows/dockerimage_windows.yml
@@ -11,6 +11,8 @@ jobs:
       run: |
         docker image list
         docker login -u "lamanchy" -p "${{ secrets.DOCKER_PASSWORD }}"
+        Get-PSDrive C | Select-Object Used,Free
+
 #        docker build . --file docker\wolf_base\windows.Dockerfile --tag lamanchy/wolf_base
 #        docker build . --file docker\wolf_app\windows.Dockerfile --tag lamanchy/wolf
 #        docker push lamanchy/wolf
