fix docker login?

--- a/.github/workflows/dockerimage_windows.yml
+++ b/.github/workflows/dockerimage_windows.yml
@@ -12,7 +12,7 @@ jobs:
         docker image list
         docker system prune -af
         docker image list
-        docker login -u "lamanchy" -p "${{ secrets.DOCKER_PASSWORD }}"
+        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u lamanchy --password-stdin
         Get-PSDrive C | Select-Object Used,Free
         docker build . --file docker\wolf_base\windows.Dockerfile --tag lamanchy/wolf_base --force-rm
         Get-PSDrive C | Select-Object Used,Free
