--- a/.github/workflows/dockerimage_linux.yml
+++ b/.github/workflows/dockerimage_linux.yml
@@ -9,7 +9,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build the Docker image
       run: |
-        docker login -u "lamanchy" -p "${{ secrets.DOCKER_PASSWORD }}"
+        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u lamanchy --password-stdin
 
 #        docker build . --file docker/wolf_base/linux.Dockerfile --tag lamanchy/wolf_base
 #        docker build . --file docker/wolf_app/linux.Dockerfile --tag lamanchy/wolf
